--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,11 +23,14 @@ jobs:
 
       - name: Run tests
         run: npm test -- --run
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
 
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: test  # deploy hanya jalan kalau test berhasil
+    needs: test
     steps:
       - name: Checkout
         uses: actions/checkout@v4
