feat(infra): Phase 2 — Migrate rate limiter & dedup to Cloudflare KV
1. Add KV namespace binding (RATE_LIMIT) to wrangler.jsonc
2. Add RATE_LIMIT: KVNamespace to Env interface
3. Rewrite rateLimit.ts: Map → KV with 60s TTL
4. Rewrite message.ts dedup: Set → KV with 300s TTL
5. Update photo.ts to pass env to isRateLimited
6. Update bot.ts handlers to pass env for KV access
7. Update tests for async KV-based rate limiter & dedup

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -20,6 +20,12 @@
 		"database_id": "abb3e1b3-d4c4-4469-a947-f6780ab39f78"
 		}
 	],
+	"kv_namespaces": [
+		{
+			"binding": "RATE_LIMIT",
+			"id": "d0d9862513b54c20a450f9e441856eb4"
+		}
+	],
 	"ai": {
 		"binding": "AI"
 	},
